--- a/EvilCorpTrading.Persistence/EvilCorpTrading.Persistence.csproj
+++ b/EvilCorpTrading.Persistence/EvilCorpTrading.Persistence.csproj
@@ -12,4 +12,14 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EvilCorpTrading.Application\EvilCorpTrading.Application.csproj" />
+  </ItemGroup>
+
 </Project>
